# forevervm

./: Dockerfile  LICENSE.md  README.md  package-lock.json  package.json  publishing.md  smithery.yaml
.github/workflows/: build-and-format.yml  javascript-check.yml  javascript-checks.yml  javascript-tests.yml  python-checks.yml  python-tests.yml  release.yml  rust-checks.yml
javascript/: .prettierrc  package-lock.json  package.json  tsconfig.base.json  tsup.config.ts  vitest.config.ts
javascript/client/: README.md  package-lock.json  package.json  tsconfig.json
javascript/client/src/: index.ts  repl.ts  types.ts
javascript/example/: README.md  index.ts  package-lock.json  package.json
javascript/example/src/: index.ts
javascript/forevervm/: README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
javascript/forevervm/src/: config.ts  get-binary.js  run.js
javascript/forevervm/src/client/: index.ts  repl.ts
javascript/forevervm/src/commands/: login.ts
javascript/forevervm/src/commands/machine/: create.ts  exec.ts  list.ts  repl.ts
javascript/mcp-server/: README.md  package-lock.json  package.json
javascript/mcp-server/src/: index.ts
javascript/mcp-server/src/install/: claude.ts  goose.ts  index.ts  windsurf.ts
javascript/sdk/: package-lock.json  package.json  tsconfig.json
javascript/sdk/src/: env.ts  index.ts  repl.ts  stream.ts  types.ts  ws.browser.ts  ws.ts
python/: .gitignore
python/forevervm/: __main__.py  config.py  pyproject.toml
python/forevervm/client/: __init__.py  types.py
python/forevervm/commands/: login.py
python/forevervm/forevervm/: __init__.py
python/sdk/: pyproject.toml
python/sdk/forevervm_sdk/: __init__.py  repl.py  types.py
python/sdk/src/: __init__.py  repl.py
python/sdk/src/forevervm_sdk/: __init__.py  repl.py
python/sdk/tests/: test_connect.py
rust/: Cargo.toml
rust/forevervm/: Cargo.toml  README.md
rust/forevervm-client/: Cargo.toml  README.md
rust/forevervm-client/src/api/: id_types.rs  mod.rs  protocol.rs  token.rs
rust/forevervm-client/src/client/: mod.rs  repl.rs  typed_socket.rs
rust/forevervm-sdk/: Cargo.toml  README.md
rust/forevervm-sdk/src/: lib.rs  util.rs
rust/forevervm-sdk/src/api/: api_types.rs  http_api.rs  protocol.rs  token.rs
rust/forevervm-sdk/src/client/: mod.rs  repl.rs  util.rs
rust/forevervm-sdk/tests/: basic_sdk_tests.rs
rust/forevervm/src/: config.rs  error.rs  lib.rs  main.rs  util.rs
rust/forevervm/src/api/: api_types.rs  http_api.rs  id_types.rs
rust/forevervm/src/client/: mod.rs  repl.rs
rust/forevervm/src/commands/: auth.rs  login.rs  machine.rs  mod.rs  repl.rs
scripts/: README.md  bump-versions.ts  package-lock.json  package.json  publish.ts  tsconfig.json
src/: config.ts
src/client/: index.ts  types.ts
src/commands/: login.ts  repl.ts
src/commands/machine/: create.ts  exec.ts
test/commands/: create-machine.test.ts  login.test.ts  repl.test.ts
test/commands/machine/: create.test.ts  exec.test.ts  list.test.ts
