[package]
name = "forevervm"
version = "0.1.13"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://forevervm.com/"
repository = "https://github.com/jamsocket/forevervm"
readme = "README.md"
description = "foreverVM CLI. Allows you to start foreverVMs and run a REPL on them."

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.4", features = ["derive", "env"] }
colorize = "0.1.0"
dirs = "6.0.0"
forevervm-sdk = { path = "../forevervm-sdk", version = "0.1.0" }
rpassword = "7.3.1"
rustyline = "15.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
url = { version = "2.5.4", features = ["serde"] }
